/**
 * Інтерфейс для планування обслуговування
 */
public interface ServicePlanner {
    void planService();
    boolean checkStatus();
}