classDiagram
    class Person {
      <<abstract>>
      - String name
      - String role
      + Person(name, role)
      + getName() String
      + getRole() String
      + printInfo() void
    }

    class ServicePlanner {
      <<interface>>
      + planService() void
      + checkStatus() boolean
    }

    class Operator {
      - String stationId
      + Operator(name, stationId)
      + monitor() void
      + report() void
    }

    class Dispatcher {
      - String contactInfo
      + Dispatcher(name, contactInfo)
      + receiveAlert(event : Event) void
    }

    class Ecologist {
      - String zone
      + Ecologist(name, zone)
      + checkExcess(measure : Measure) boolean
      + planService() void
      + checkStatus() boolean
    }

    class Measure {
      - float value
      + Measure(value)
      + getValue() float
    }

    class Event {
      - String type
      - Measure measure
      + Event(type, measure)
      + getType() String
      + getMeasure() Measure
    }

    %% Inheritance
    Person <|-- Operator
    Person <|-- Dispatcher
    Person <|-- Ecologist

    %% Interface implementation
    ServicePlanner <|.. Ecologist

    %% Relationships between domain classes
    Event --> Measure : measure

    %% Logical dependencies
    Ecologist ..> Measure : checkExcess()
    Dispatcher ..> Event : receiveAlert()
    Operator ..> Measure : indirect via Application